--- a/DX12Tutorial/DX12Tutorial/DX12Tutorial.vcxproj.filters
+++ b/DX12Tutorial/DX12Tutorial/DX12Tutorial.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="PeraPolygon\PeraPolygon.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SphereRenderer\SphereRenderer.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Application.h">
@@ -42,6 +45,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="PeraPolygon\PeraPolygon.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="SphereRenderer\SphereRenderer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
