--- a/DX12Tutorial/DX12Tutorial/DX12Tutorial.vcxproj
+++ b/DX12Tutorial/DX12Tutorial/DX12Tutorial.vcxproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Application.cpp" />
     <ClCompile Include="DX12\Dx12.cpp" />
+    <ClCompile Include="LineDrawer\LineDrawer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PeraPolygon\PeraPolygon.cpp" />
     <ClCompile Include="SphereData\SphereData.cpp" />
@@ -132,11 +133,20 @@
   <ItemGroup>
     <ClInclude Include="Application\Application.h" />
     <ClInclude Include="DX12\Dx12.h" />
+    <ClInclude Include="LineDrawer\LineDrawer.h" />
     <ClInclude Include="PeraPolygon\PeraPolygon.h" />
     <ClInclude Include="SphereData\SphereData.h" />
     <ClInclude Include="SphereRenderer\SphereRenderer.h" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="Shader\LinePixelShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Shader\LineVertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+    </FxCompile>
     <FxCompile Include="Shader\PeraPixelShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
