--- a/DX12Tutorial/DX12Tutorial/DX12Tutorial.vcxproj.filters
+++ b/DX12Tutorial/DX12Tutorial/DX12Tutorial.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="SphereData\SphereData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="LineDrawer\LineDrawer.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Application.h">
@@ -50,11 +53,16 @@
     <ClInclude Include="SphereData\SphereData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="LineDrawer\LineDrawer.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shader\SphereVertexShader.hlsl" />
     <FxCompile Include="Shader\SpherePixelShader.hlsl" />
     <FxCompile Include="Shader\PeraVertexShader.hlsl" />
     <FxCompile Include="Shader\PeraPixelShader.hlsl" />
+    <FxCompile Include="Shader\LineVertexShader.hlsl" />
+    <FxCompile Include="Shader\LinePixelShader.hlsl" />
   </ItemGroup>
 </Project>
